Prepare for new project website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head><title>Reinhart Previano</title></head>
+  <body><h1>Hello!</h1><p>If you are stalking for my new website, here it is!<br>Enjoy!<hr>Reinhart Previano</p></body>
+</html>
