Added viewpoer meta tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@ Reinhart P. K. 2018
 -->
 <head>
   <title>Reinhart Previano K.</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" type="text/css" href="https://rsms.me/inter/inter-ui.css">
   <script src="moment.js"></script>
@@ -19,33 +21,33 @@ Reinhart P. K. 2018
   <div class="cardcontainer">
   <div class="card black">
     <h2>Common Voice</h2>
-    <span class="acontainer"><a href="https://voice.mozilla.org">Visit Website</a> | <a href="https://voice.mozilla.org/record">Record Your Voice</a></span>
+    <p class="acontainer"><a href="https://voice.mozilla.org">Visit Website</a> | <a href="https://voice.mozilla.org/record">Record Your Voice</a></p>
     <p><b>Teach machines how real people speak</b><br>A project by <b>Mozilla</b></p>
   </div>
   <div class="card c-osm white">
     <h2>OpenStreetMap</h2>
-    <span class="acontainer"><a href="https://www.openstreetmap.org">Visit Website</a> | <a href="https://www.openstreetmap.org/user/Reinhart%20Previano">View Profile</a> | <a href="https://www.openstreetmap.org/user/Reinhart%20Previano/diary">View User Diary</a></span>
+    <p class="acontainer"><a href="https://www.openstreetmap.org">Visit Website</a> | <a href="https://www.openstreetmap.org/user/Reinhart%20Previano">View Profile</a> | <a href="https://www.openstreetmap.org/user/Reinhart%20Previano/diary">View User Diary</a></p>
     <p>A <b>free</b> and <b>crowd-sourced</b> community mapping project for <b>the entire world</b></p>
     <img src="img/osm.png" alt="OpenStreetMap view of Banjarmasin, South Kalimantan, Indonesia">
   </div>
   <div class="card black">
     <h2>LinuxCounter Stats</h2>
-    <span class="acontainer"><a href="https://www.linuxcounter.net/user/622299">View Profile</a></span>
+    <p class="acontainer"><a href="https://www.linuxcounter.net/user/622299">View Profile</a></p>
     <img class="lcountimg" src="https://www.linuxcounter.net/cert/622299.png" alt="LinuxCounter badge for Reinhart Previano">
   </div>
   <div class="card c-quora white">
     <h2>Quora</h2>
-    <span class="acontainer"><a href="https://www.quora.com">Visit Website</a> | <a href="https://www.quora.com/profile/Reinhart-Previano">View Profile</a></span>
+    <p class="acontainer"><a href="https://www.quora.com">Visit Website</a> | <a href="https://www.quora.com/profile/Reinhart-Previano">View Profile</a></p>
     <p>A place to <b>share knowledge</b> and better <b>understand the world</b></p>
   </div>
   <div class="card c-webcompat black">
     <h2>Webcompat.com</h2>
-    <span class="acontainer"><a href="https://webcompat.com">Visit Website</a> | <a href="https://webcompat.com/activity/reinhart1010">View Profile</a> | <a href="https://webcompat.com/issues/new">Report Site Issue</a></span>
+    <p class="acontainer"><a href="https://webcompat.com">Visit Website</a> | <a href="https://webcompat.com/activity/reinhart1010">View Profile</a> | <a href="https://webcompat.com/issues/new">Report Site Issue</a></p>
     <p><b>Bug reporting for the Internet</b><br>Developed by <b>volunteers</b> and supported by <b>Mozilla</b></p>
   </div>
   <div class="card c-wikihow white">
     <h2>wikiHow</h2>
-    <span class="acontainer"><a href="https://wikihow.com">Visit Website</a> | <a href="https://www.wikihow.com/User:Reinhart-Previano">View Profile</a></span>
+    <p class="acontainer"><a href="https://wikihow.com">Visit Website</a> | <a href="https://www.wikihow.com/User:Reinhart-Previano">View Profile</a></p>
     <p>to do <b>anything</b></p>
   </div>
   </div>
@@ -53,17 +55,17 @@ Reinhart P. K. 2018
   <div class="cardcontainer">
   <div class="card c-gitter white">
     <h2>Gitter</h2>
-    <span class="acontainer">(Coming soon)</span>
+    <p class="acontainer">(Coming soon)</p>
     <p>For software development geeks and more</p>
   </div>
   <div class="card c-github white">
     <h2>GitHub</h2>
-    <span class="acontainer"><a href="https://github.com/reinhart1010">View Profile</a></span>
+    <p class="acontainer"><a href="https://github.com/reinhart1010">View Profile</a></p>
     <p>For software development geeks and more</p>
   </div>
   <div class="card c-telegram white">
     <h2>Telegram</h2>
-    <span class="acontainer"><a href="https://t.me/reinpre10">Visit Channel (for News)</a> | <a href="https://t.me/reinhart1010">Chat</a></span>
+    <p class="acontainer"><a href="https://t.me/reinpre10">Visit Channel (for News)</a> | <a href="https://t.me/reinhart1010">Chat</a></p>
     <p>For software development geeks and more</p>
   </div>
   </div>
