Fix layout on mobile

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Reinhart P. K. 2018
   </div>
   <div class="card c-osm white">
     <h2>OpenStreetMap</h2>
-    <p class="acontainer"><a href="https://www.openstreetmap.org">Visit Website</a> | <a href="https://www.openstreetmap.org/user/Reinhart%20Previano">View Profile</a> | <a href="https://www.openstreetmap.org/user/Reinhart%20Previano/diary">View User Diary</a></p>
+    <p class="acontainer"><a href="https://www.openstreetmap.org">Visit Website</a> | <a href="https://www.openstreetmap.org/user/Reinhart%20Previano">View Profile</a></p>
     <p>A <b>free</b> and <b>crowd-sourced</b> community mapping project for <b>the entire world</b></p>
     <img src="img/osm.png" alt="OpenStreetMap view of Banjarmasin, South Kalimantan, Indonesia">
   </div>
@@ -42,7 +42,7 @@ Reinhart P. K. 2018
   </div>
   <div class="card c-webcompat black">
     <h2>Webcompat.com</h2>
-    <p class="acontainer"><a href="https://webcompat.com">Visit Website</a> | <a href="https://webcompat.com/activity/reinhart1010">View Profile</a> | <a href="https://webcompat.com/issues/new">Report Site Issue</a></p>
+    <p class="acontainer"><a href="https://webcompat.com">Visit Website</a> | <a href="https://webcompat.com/activity/reinhart1010">View Profile</a><br><a href="https://webcompat.com/issues/new">Report Site Issue</a></p>
     <p><b>Bug reporting for the Internet</b><br>Developed by <b>volunteers</b> and supported by <b>Mozilla</b></p>
   </div>
   <div class="card c-wikihow white">
