--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ Reinhart P. K. 2018
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="colors.min.css">
   <link rel="stylesheet" type="text/css" href="https://rsms.me/inter/inter-ui.css">
   <script src="moment.js"></script>
   <script src="moment-timezone-with-data.js"></script>
@@ -16,21 +17,39 @@ Reinhart P. K. 2018
 <body onLoad="lhrCount()">
   <div class="logocontainer"></div>
   <p><b>Note:</b> Website under development. See <a href="https://github.com/reinhart1010/reinhart1010.github.io">https://github.com/reinhart1010/reinhart1010.github.io</a> for progress.</p>
-  <h1 id="counter"></h1>
+  <h1 id="counter">Reinhart is undefined years old. Turn on JavaScript and see magic.</h1>
+  <h1>Projects</h1>
+  <div class="cardcontainer">
+  <div class="card bg-black white">
+    <h2>Ayam Laboratories</h2>
+    <p class="acontainer"><a href="#">Coming Soon</a></p>
+    <p>More random stuff will be placed here<br><b>Fun Fact:</b> "Ayam" is an Indonesian and Malay word for Chicken.</p>
+  </div>
+  <div class="card bg-olive white">
+    <h2>Christmas T-Rex</h2>
+    <p class="acontainer"><a href="https://reinhart1010.github.io/christmas-t-rex/play-en.html">Play Now</a> | <a href="https://github.com/reinhart1010/christmas-t-rex">Source Code</a></p>
+    <p>I don't have much time to prepare a <b>tree</b> for Christmas, so I remixed a Chrome <b>t-rex</b> (You are offline) game.</p>
+  </div>
+  <div class="card bg-maroon white">
+    <h2>Project Brigitte</h2>
+    <p class="acontainer"><a href="#">Coming Soon</a> | <a href="https://playoverwatch.com/en-us/heroes/brigitte">Overwatch Reference</a></p>
+    <p>Formerly <i>"Based on Reinhar(d)t Technology"</i></p>
+  </div>
+  </div>
   <h1>Contributions</h1>
   <div class="cardcontainer">
-  <div class="card black">
+  <div class="card bg-white">
     <h2>Common Voice</h2>
     <p class="acontainer"><a href="https://voice.mozilla.org">Visit Website</a> | <a href="https://voice.mozilla.org/record">Record Your Voice</a></p>
     <p><b>Teach machines how real people speak</b><br>A project by <b>Mozilla</b></p>
   </div>
-  <div class="card c-osm white">
+  <div class="card bg-green white">
     <h2>OpenStreetMap</h2>
     <p class="acontainer"><a href="https://www.openstreetmap.org">Visit Website</a> | <a href="https://www.openstreetmap.org/user/Reinhart%20Previano">View Profile</a></p>
     <p>A <b>free</b> and <b>crowd-sourced</b> community mapping project for <b>the entire world</b></p>
     <img src="img/osm.png" alt="OpenStreetMap view of Banjarmasin, South Kalimantan, Indonesia">
   </div>
-  <div class="card black">
+  <div class="card bg-white">
     <h2>LinuxCounter Stats</h2>
     <p class="acontainer"><a href="https://www.linuxcounter.net/user/622299">View Profile</a></p>
     <img class="lcountimg" src="https://www.linuxcounter.net/cert/622299.png" alt="LinuxCounter badge for Reinhart Previano">
@@ -51,6 +70,13 @@ Reinhart P. K. 2018
     <p>to do <b>anything</b></p>
   </div>
   </div>
+  <h1>About</h1>
+  <div class="cardcontainer">
+  <div class="card bg-blue white">
+    <h2>Since October 10, 2001</h2>
+    <p>More info coming soon</p>
+  </div>
+  </div>
   <h1>Contact</h1>
   <div class="cardcontainer">
   <div class="card c-gitter white">
@@ -66,6 +92,11 @@ Reinhart P. K. 2018
   <div class="card c-telegram white">
     <h2>Telegram</h2>
     <p class="acontainer"><a href="https://t.me/reinpre10">Visit Channel (for News)</a> | <a href="https://t.me/reinhart1010">Chat</a></p>
+    <p>For software development geeks and more</p>
+  </div>
+  <div class="card c-twitter white">
+    <h2>Twitter</h2>
+    <p class="acontainer"><a href="https://twitter.com/@ReinPre10">View Profile</a>
     <p>For software development geeks and more</p>
   </div>
   </div>
