--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Reinhart P. K. 2018
   <div class="card bg-white">
     <h2>Common Voice</h2>
     <p class="acontainer"><a href="https://voice.mozilla.org">Visit Website</a> | <a href="https://voice.mozilla.org/record">Record Your Voice</a></p>
-    <p><b>Teach machines how real people speak</b><br>A project by <b>Mozilla</b></p>
+    <p>A crowd-sourced <b>voice recognition</b> database project by Mozilla.</p>
   </div>
   <div class="card bg-green white">
     <h2>OpenStreetMap</h2>
@@ -57,17 +57,17 @@ Reinhart P. K. 2018
   <div class="card c-quora white">
     <h2>Quora</h2>
     <p class="acontainer"><a href="https://www.quora.com">Visit Website</a> | <a href="https://www.quora.com/profile/Reinhart-Previano">View Profile</a></p>
-    <p>A place to <b>share knowledge</b> and better <b>understand the world</b></p>
+    <p></p>
   </div>
   <div class="card c-webcompat black">
     <h2>Webcompat.com</h2>
     <p class="acontainer"><a href="https://webcompat.com">Visit Website</a> | <a href="https://webcompat.com/activity/reinhart1010">View Profile</a><br><a href="https://webcompat.com/issues/new">Report Site Issue</a></p>
-    <p><b>Bug reporting for the Internet</b><br>Developed by <b>volunteers</b> and supported by <b>Mozilla</b></p>
+    <p><b>An open community</b></p>
   </div>
   <div class="card c-wikihow white">
     <h2>wikiHow</h2>
     <p class="acontainer"><a href="https://wikihow.com">Visit Website</a> | <a href="https://www.wikihow.com/User:Reinhart-Previano">View Profile</a></p>
-    <p>to do <b>anything</b></p>
+    <p>A community-run wiki to help you in doing <b>anything</b></p>
   </div>
   </div>
   <h1>About</h1>
@@ -79,6 +79,11 @@ Reinhart P. K. 2018
   </div>
   <h1>Contact</h1>
   <div class="cardcontainer">
+  <div class="card c-discord white">
+    <h2>Discord</h2>
+    <p class="acontainer">(Coming soon)</p>
+    <p>Connecting game communities</p>
+  </div>
   <div class="card c-gitter white">
     <h2>Gitter</h2>
     <p class="acontainer">(Coming soon)</p>
@@ -87,23 +92,28 @@ Reinhart P. K. 2018
   <div class="card c-github white">
     <h2>GitHub</h2>
     <p class="acontainer"><a href="https://github.com/reinhart1010">View Profile</a></p>
-    <p>For software development geeks and more</p>
+    <p>For open-source software projects</p>
+  </div>
+  <div class="card bg-white black">
+    <h2>Medium</h2>
+    <p class="acontainer">(Coming soon)</p>
+    <p>For future updates</p>
   </div>
   <div class="card c-telegram white">
     <h2>Telegram</h2>
     <p class="acontainer"><a href="https://t.me/reinpre10">Visit Channel (for News)</a> | <a href="https://t.me/reinhart1010">Chat</a></p>
-    <p>For software development geeks and more</p>
+    <p>For open-source software projects and future updates</p>
   </div>
   <div class="card c-twitter white">
     <h2>Twitter</h2>
     <p class="acontainer"><a href="https://twitter.com/@ReinPre10">View Profile</a>
-    <p>For software development geeks and more</p>
+    <p>For random things (Webcompat issues, game communities, tech news participation, etc.)</p>
   </div>
   </div>
   <div class="credits">
     <p class="small">
       <b>Copyright 2015-2018 Reinhart Previano K.</b><br>
-      OpenStreetMap is is a trademark of the OpenStreetMap Foundation.
+      <!--Trademark acknowledgements will be available later-->
     </p>
   </div>
 </body>
