Major update: relocated files, add new font settings, add test texts for testing.

--- a/index.html
+++ b/index.html
@@ -7,35 +7,25 @@ Reinhart P. K. 2018
   <title>Reinhart Previano K.</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="stylesheet" type="text/css" href="colors.min.css">
-  <link rel="stylesheet" type="text/css" href="https://rsms.me/inter/inter-ui.css">
-  <script src="moment.js"></script>
-  <script src="moment-timezone-with-data.js"></script>
-  <script src="clock.js"></script>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/colors.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/fonts.css">
 </head>
-<body onLoad="lhrCount()">
+<body>
   <div class="logocontainer"></div>
   <p><b>Note:</b> Website under development. See <a href="https://github.com/reinhart1010/reinhart1010.github.io">https://github.com/reinhart1010/reinhart1010.github.io</a> for progress.</p>
-  <h1 id="counter">Reinhart is undefined years old. Turn on JavaScript and see magic.</h1>
-  <h1>Projects</h1>
-  <div class="cardcontainer">
-  <div class="card bg-black white">
-    <h2>Ayam Laboratories</h2>
-    <p class="acontainer"><a href="#">Coming Soon</a></p>
-    <p>More random stuff will be placed here<br><b>Fun Fact:</b> "Ayam" is an Indonesian and Malay word for Chicken.</p>
-  </div>
-  <div class="card bg-olive white">
-    <h2>Christmas T-Rex</h2>
-    <p class="acontainer"><a href="https://reinhart1010.github.io/christmas-t-rex/play-en.html">Play Now</a> | <a href="https://github.com/reinhart1010/christmas-t-rex">Source Code</a></p>
-    <p>I don't have much time to prepare a <b>tree</b> for Christmas, so I remixed a Chrome <b>t-rex</b> (You are offline) game.</p>
-  </div>
-  <div class="card bg-maroon white">
-    <h2>Project Brigitte</h2>
-    <p class="acontainer"><a href="#">Coming Soon</a> | <a href="https://playoverwatch.com/en-us/heroes/brigitte">Overwatch Reference</a></p>
-    <p>Formerly <i>"Based on Reinhar(d)t Technology"</i></p>
-  </div>
-  </div>
+  <p class="f-mnt f-rpk"><b>Reinhart</b> Previano K.</p>
+  <div class="contentcontainer">
+  <h1>Reinhart is 17 years old</h1>
+  <h1>Communities and Projects</h1>
+  <h2>Personal Projects</h2>
+  <div class="cardcontainer" id="list-communities-personal"></div>
+  <h2>Mozilla-Related Projects</h2>
+  <div class="cardcontainer" id="list-communities-mozilla"></div>
+  <h2>Other Communities</h2>
+  <div class="cardcontainer" id="list-communities-other"></div>
+  <h2>Communities with Inactive participation</h2>
+  <div class="cardcontainer" id="list-communities-inactive"></div>
   <h1>Contributions</h1>
   <div class="cardcontainer">
   <div class="card bg-white">
@@ -110,11 +100,13 @@ Reinhart P. K. 2018
     <p>For random things (Webcompat issues, game communities, tech news participation, etc.)</p>
   </div>
   </div>
+  </div>
   <div class="credits">
     <p class="small">
       <b>Copyright 2015-2018 Reinhart Previano K.</b><br>
       <!--Trademark acknowledgements will be available later-->
     </p>
   </div>
+  <script src="assets/js/content.js"></script>
 </body>
 </html>
