--- a/index.html
+++ b/index.html
@@ -14,9 +14,21 @@ Reinhart P. K. 2018
 <body>
   <div class="logocontainer"></div>
   <p><b>Note:</b> Website under development. See <a href="https://github.com/reinhart1010/reinhart1010.github.io">https://github.com/reinhart1010/reinhart1010.github.io</a> for progress.</p>
+  <b>This site design truly needs your opinion. Visit <a href="https://docs.google.com/forms/d/e/1FAIpQLScfGCkR7wOMEDh017LC0nuRa4X5XJNAC-vqcmayKP_hNNkUGA/viewform">this link</a> for your feedback!</b>
   <p class="f-mnt f-rpk"><b>Reinhart</b> Previano K.</p>
   <div class="contentcontainer">
   <h1>Reinhart is 17 years old</h1>
+  <h1>Heading 1</h1>
+  <h2>Heading 2</h2>
+  <h3>Heading 3</h3>
+  <h4>Heading 4</h4>
+  <h5>Heading 5</h5>
+  <h6>Heading 6</h6>
+  <p>Paragraph (default)</p>
+  <p class="p1">Paragraph 1</p>
+  <p class="p2">Paragraph 2</p>
+  <p class="c1">Caption 1</p>
+  <p class="c2">Caption 2</p><hr>
   <h1>Communities and Projects</h1>
   <h2>Personal Projects</h2>
   <div class="cardcontainer" id="list-communities-personal"></div>
