Remove font tests and some cards

--- a/index.html
+++ b/index.html
@@ -10,37 +10,43 @@ Reinhart P. K. 2018
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <link rel="stylesheet" type="text/css" href="assets/css/colors.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/fonts.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/special-r17.css">
 </head>
 <body>
-  <div class="logocontainer"></div>
-  <p><b>Note:</b> Website under development. See <a href="https://github.com/reinhart1010/reinhart1010.github.io">https://github.com/reinhart1010/reinhart1010.github.io</a> for progress.</p>
-  <b>This site design truly needs your opinion. Visit <a href="https://docs.google.com/forms/d/e/1FAIpQLScfGCkR7wOMEDh017LC0nuRa4X5XJNAC-vqcmayKP_hNNkUGA/viewform">this link</a> for your feedback!</b>
-  <p class="f-mnt f-rpk"><b>Reinhart</b> Previano K.</p>
+  <div class="titlebar t-right bg-blue white">
+    <p class="f-mnt f-rpk"><b>Reinhart</b> Previano K.</p>
+  </div>
+  <div class="contentheader t-center bg-blue white">
+    <p class="r17-titlelarge">Reinhart is now legal!</p>
+    <p class="r17-subtitle">Thank you for the amazing 17 years.</p>
+    <p class="r17-text">Wednesday, October 10<sup>th</sup> 2001 - Wednesday, October 10<sup>th</sup> 2018</p>
+  </div>
+  <div class="contentheader">
+    <div class="contentcontainer">
+      <h1>What you can do?</h1>
+      <div class="cardcontainer">
+        <div class="card bg-teal white">
+          <h2>Send Wishes</h2>
+          <p class="acontainer"><a href="https://www.sarahah.com/messages/user/fb297e9d-f1e2-4776-9957-784e5ab4f202"><i class="icon ion-android-send"></i> Send via Sarahah</a> | <a href="https://www.sarahah.com/home/privacy"><i class="icon ion-android-document"></i> Privacy Policy</a></p>
+          <p>Simply send wishes through this form. Login is not required and all messages are anonymous, unless if you state your information in your message.</p>
+        </div>
+        <div class="card bg-navy white">
+          <h2>Explore Banjarmasin</h2>
+          <p class="acontainer"><a href="https://en.wikipedia.org/wiki/Banjarmasin"><i class="icon ion-android-document"></i> About The City</a> | <a href="https://www.openstreetmap.org/node/544517373"><i class="icon ion-android-map"></i> View Map (OSM)</a></p>
+          <p>Banjarmasin is a city in South Kalimantan, Indonesia. Known locally as the "city of thousand rivers", this is where Reinhart is born.</p>
+        </div>
+        <div class="card bg-purple white">
+          <h2>Take A Short Design Survey</h2>
+          <p class="acontainer"><a href="https://docs.google.com/forms/d/e/1FAIpQLScfGCkR7wOMEDh017LC0nuRa4X5XJNAC-vqcmayKP_hNNkUGA/viewform"><i class='icon ion-play'></i> Take Survey (Google Forms)</a></p>
+          <p>This website is still under development, but I would be happy if you could choose which design is the best for this site.</p>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="contentcontainer">
-  <h1>Reinhart is 17 years old</h1>
-  <h1>Heading 1</h1>
-  <h2>Heading 2</h2>
-  <h3>Heading 3</h3>
-  <h4>Heading 4</h4>
-  <h5>Heading 5</h5>
-  <h6>Heading 6</h6>
-  <p>Paragraph (default)</p>
-  <p class="p1">Paragraph 1</p>
-  <p class="p2">Paragraph 2</p>
-  <p class="c1">Caption 1</p>
-  <p class="c2">Caption 2</p><hr>
-  <h1>Communities and Projects</h1>
-  <h2>Personal Projects</h2>
-  <div class="cardcontainer" id="list-communities-personal"></div>
-  <h2>Mozilla-Related Projects</h2>
-  <div class="cardcontainer" id="list-communities-mozilla"></div>
-  <h2>Other Communities</h2>
-  <div class="cardcontainer" id="list-communities-other"></div>
-  <h2>Communities with Inactive participation</h2>
-  <div class="cardcontainer" id="list-communities-inactive"></div>
-  <h1>Contributions</h1>
+  <h1>I am currently helping in</h1>
   <div class="cardcontainer">
-  <div class="card bg-white">
+  <div class="card bg-silver black">
     <h2>Common Voice</h2>
     <p class="acontainer"><a href="https://voice.mozilla.org">Visit Website</a> | <a href="https://voice.mozilla.org/record">Record Your Voice</a></p>
     <p>A crowd-sourced <b>voice recognition</b> database project by Mozilla.</p>
@@ -51,65 +57,49 @@ Reinhart P. K. 2018
     <p>A <b>free</b> and <b>crowd-sourced</b> community mapping project for <b>the entire world</b></p>
     <img src="img/osm.png" alt="OpenStreetMap view of Banjarmasin, South Kalimantan, Indonesia">
   </div>
-  <div class="card bg-white">
-    <h2>LinuxCounter Stats</h2>
-    <p class="acontainer"><a href="https://www.linuxcounter.net/user/622299">View Profile</a></p>
-    <img class="lcountimg" src="https://www.linuxcounter.net/cert/622299.png" alt="LinuxCounter badge for Reinhart Previano">
-  </div>
-  <div class="card c-quora white">
-    <h2>Quora</h2>
-    <p class="acontainer"><a href="https://www.quora.com">Visit Website</a> | <a href="https://www.quora.com/profile/Reinhart-Previano">View Profile</a></p>
-    <p></p>
-  </div>
-  <div class="card c-webcompat black">
+  <div class="card bg-yellow black">
     <h2>Webcompat.com</h2>
     <p class="acontainer"><a href="https://webcompat.com">Visit Website</a> | <a href="https://webcompat.com/activity/reinhart1010">View Profile</a><br><a href="https://webcompat.com/issues/new">Report Site Issue</a></p>
-    <p><b>An open community</b></p>
-  </div>
-  <div class="card c-wikihow white">
-    <h2>wikiHow</h2>
-    <p class="acontainer"><a href="https://wikihow.com">Visit Website</a> | <a href="https://www.wikihow.com/User:Reinhart-Previano">View Profile</a></p>
-    <p>A community-run wiki to help you in doing <b>anything</b></p>
+    <p><b>An open community</b> dedicated to resolve website issues across web browsers and operating systems.</p>
   </div>
   </div>
-  <h1>About</h1>
+  <h1>Visit and contact me on</h1>
   <div class="cardcontainer">
-  <div class="card bg-blue white">
-    <h2>Since October 10, 2001</h2>
-    <p>More info coming soon</p>
-  </div>
-  </div>
-  <h1>Contact</h1>
-  <div class="cardcontainer">
-  <div class="card c-discord white">
-    <h2>Discord</h2>
-    <p class="acontainer">(Coming soon)</p>
-    <p>Connecting game communities</p>
-  </div>
-  <div class="card c-gitter white">
-    <h2>Gitter</h2>
-    <p class="acontainer">(Coming soon)</p>
-    <p>For software development geeks and more</p>
+  <div class="card bg-red white">
+    <h2>Email</h2>
+    <p><b>Address:</b> reinhart_previano@yahoo.com</p>
+    <p class="acontainer"><a href="mailto:reinhart_previano@yahoo.com">Send Something</a></p>
   </div>
   <div class="card c-github white">
     <h2>GitHub</h2>
+    <p><b>User ID:</b> reinhart1010</p>
     <p class="acontainer"><a href="https://github.com/reinhart1010">View Profile</a></p>
-    <p>For open-source software projects</p>
   </div>
-  <div class="card bg-white black">
-    <h2>Medium</h2>
-    <p class="acontainer">(Coming soon)</p>
-    <p>For future updates</p>
+  <div class="card bg-orange white">
+    <h2>GitLab</h2>
+    <p><b>User ID:</b> reinhart1010</p>
+    <p class="acontainer"><a href="https://gitlab.com/reinhart1010">View Profile</a></p>
+  </div>
+  <div class="card c-quora white">
+    <h2>Quora</h2>
+    <p><b>User Name:</b> Reinhart Previano</p>
+    <p class="acontainer"><a href="https://www.quora.com/profile/Reinhart-Previano">View Profile</a></p>
+    <p></p>
+  </div>
+  <div class="card bg-teal white">
+    <h2>Sarahah</h2>
+    <p><b>User ID:</b> reinpre10</p>
+    <p class="acontainer"><a href="https://www.sarahah.com/messages/user/fb297e9d-f1e2-4776-9957-784e5ab4f202">Write Something</a>
   </div>
   <div class="card c-telegram white">
     <h2>Telegram</h2>
-    <p class="acontainer"><a href="https://t.me/reinpre10">Visit Channel (for News)</a> | <a href="https://t.me/reinhart1010">Chat</a></p>
-    <p>For open-source software projects and future updates</p>
+    <p><b>User ID:</b> reinhart1010</p>
+    <p class="acontainer"><a href="https://t.me/reinhart1010">Chat</a></p>
   </div>
   <div class="card c-twitter white">
     <h2>Twitter</h2>
+    <p><b>User ID:</b> @ReinPre10 (Case-sensitive)</p>
     <p class="acontainer"><a href="https://twitter.com/@ReinPre10">View Profile</a>
-    <p>For random things (Webcompat issues, game communities, tech news participation, etc.)</p>
   </div>
   </div>
   </div>
