Added redesign notice

--- a/index.html
+++ b/index.html
@@ -13,32 +13,17 @@ Reinhart P. K. 2018
   <link rel="stylesheet" type="text/css" href="assets/css/special-r17.css">
 </head>
 <body>
-  <div class="titlebar t-right bg-blue white">
+  <div class="titlebar t-right">
     <p class="f-mnt f-rpk"><b>Reinhart</b> Previano K.</p>
-  </div>
-  <div class="contentheader t-center bg-blue white">
-    <p class="r17-titlelarge">Reinhart is now legal!</p>
-    <p class="r17-subtitle">Thank you for the amazing 17 years.</p>
-    <p class="r17-text">Wednesday, October 10<sup>th</sup> 2001 - Wednesday, October 10<sup>th</sup> 2018</p>
   </div>
   <div class="contentheader">
     <div class="contentcontainer">
-      <h1>What you can do?</h1>
+    <h1>Notices</h1>
       <div class="cardcontainer">
-        <div class="card bg-teal white">
-          <h2>Send Wishes</h2>
-          <p class="acontainer"><a href="https://www.sarahah.com/messages/user/fb297e9d-f1e2-4776-9957-784e5ab4f202"><i class="icon ion-android-send"></i> Send via Sarahah</a> | <a href="https://www.sarahah.com/home/privacy"><i class="icon ion-android-document"></i> Privacy Policy</a></p>
-          <p>Simply send wishes through this form. Login is not required and all messages are anonymous, unless if you state your information in your message.</p>
-        </div>
-        <div class="card bg-navy white">
-          <h2>Explore Banjarmasin</h2>
-          <p class="acontainer"><a href="https://en.wikipedia.org/wiki/Banjarmasin"><i class="icon ion-android-document"></i> About The City</a> | <a href="https://www.openstreetmap.org/node/544517373"><i class="icon ion-android-map"></i> View Map (OSM)</a></p>
-          <p>Banjarmasin is a city in South Kalimantan, Indonesia. Known locally as the "city of thousand rivers", this is where Reinhart is born.</p>
-        </div>
-        <div class="card bg-purple white">
-          <h2>Take A Short Design Survey</h2>
-          <p class="acontainer"><a href="https://docs.google.com/forms/d/e/1FAIpQLScfGCkR7wOMEDh017LC0nuRa4X5XJNAC-vqcmayKP_hNNkUGA/viewform"><i class='icon ion-play'></i> Take Survey (Google Forms)</a></p>
-          <p>This website is still under development, but I would be happy if you could choose which design is the best for this site.</p>
+        <div class="card bg-orange white">
+          <h2>A redesign is underway!</h2>
+          <p class="acontainer"><a href="https://twitter.com/ReinPre10/status/1101083705106288641"><i class="icon ion-android-send"></i> Read Announcement (Twitter)</a></p>
+          <p>A new design language for apps to books to signages, videos, and more.</p>
         </div>
       </div>
     </div>
