Added Jackpot GBK

--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@ Reinhart P. K. 2018
     </div>
   </div>
   <div class="contentcontainer">
+  <h1>I have created</h1>
+  <div class="cardcontainer">
+    <div class="card bg-maroon white">
+      <h2>Jackpot GBK*</h2>
+      <p class="acontainer"><a href="https://reinhart1010.github.io/jackpotgbk?utm_source=github&utm_medium=repository&utm_campaign=hello">Play</a> | <a href="https://github.com/reinhart1010/jackpotgbk">Source Code</a></p>
+      <p>*Gunting, Batu, Kertas</p>
+    </div>
+  </div>
   <h1>I am currently helping in</h1>
   <div class="cardcontainer">
   <div class="card bg-silver black">
