feat: Add new cards

--- a/index.html
+++ b/index.html
@@ -545,6 +545,13 @@
       <br />
       <h5 class="sidebar-title">Working On</h5>
       <div class="sidebar-divider"></div>
+      <a href="https://bearcats.dev/innovations" target="_blank" class="sidebar-link sidebar-link-with-icon">
+        <span class="sidebar-icon text-white" style="background-color: #428dfc">
+          <img src="/img/logo/adab.png" alt="Icon">
+        </span>
+        ADAB to Connect<br>
+        Ayo Dengar Ayo Bicara
+      </a>
       <a href="https://computerun.id" target="_blank" class="sidebar-link sidebar-link-with-icon">
         <span class="sidebar-icon text-white" style="background-color: #0c1631">
           <img src="/img/logo/computerun-2020.png" alt="Icon">
@@ -566,6 +573,14 @@
         </span>
         Handwashing Station<br>Map (HOT-USAID-PDC)
       </a>
+      <a href="https://himti.or.id/" target="_blank" class="sidebar-link sidebar-link-with-icon">
+        <span class="sidebar-icon w3-metro-dark-blue text-white">
+          <svg class="bi" width="18" height="18" fill="currentColor">
+            <use xlink:href="/img/bootstrap-icons.svg#people"/>
+          </svg>
+        </span>
+        HIMTI Intership
+      </a>
       <a href="https://reinhart1010/ika" target="_blank" class="sidebar-link sidebar-link-with-icon">
         <span class="sidebar-icon bg-success text-dark">
           <svg class="bi" width="18" height="18" fill="currentColor">
@@ -582,14 +597,20 @@
         </span>
         Kotakode.com
       </a>
+      <a href="https://webcompat.com" target="_blank" class="sidebar-link sidebar-link-with-icon">
+        <span class="sidebar-icon bg-secondary text-dark">
+          <svg class="bi" width="18" height="18" fill="currentColor">
+            <use xlink:href="/img/bootstrap-icons.svg#globe"/>
+          </svg>
+        </span>
+        Webcompat.com
+      </a>
       <br />
       <h5 class="sidebar-title">Participating On</h5>
       <div class="sidebar-divider"></div>
       <a href="https://competition.binus.ac.id/icpc2020/" target="_blank" class="sidebar-link sidebar-link-with-icon">
-        <span class="sidebar-icon bg-primary text-white">
-          <svg class="bi" width="18" height="18" fill="currentColor">
-            <use xlink:href="/img/bootstrap-icons.svg#code-square"/>
-          </svg>
+        <span class="sidebar-icon">
+          <img src="/img/logo/icpc.ico" alt="Icon">
         </span>
         ICPC INC 2020
       </a>
@@ -664,14 +685,6 @@
         </span>
         Mozilla Common Voice
       </a>
-      <a href="https://webcompat.com" target="_blank" class="sidebar-link sidebar-link-with-icon">
-        <span class="sidebar-icon bg-secondary text-dark">
-          <svg class="bi" width="18" height="18" fill="currentColor">
-            <use xlink:href="/img/bootstrap-icons.svg#globe"/>
-          </svg>
-        </span>
-        Webcompat.com
-      </a>
       <br />
       <h5 class="sidebar-title">Past Participations</h5>
       <div class="sidebar-divider"></div>
@@ -680,6 +693,14 @@
           <i class="fa fa-lg fa-digitalocean" aria-hidden="true"></i>
         </span>
         Hacktoberfest 2019
+      </a>
+      <a href="https://kotakode.com/challenges" target="_blank" class="sidebar-link sidebar-link-with-icon">
+        <span class="sidebar-icon w3-metro-teal text-white">
+          <svg class="bi" width="18" height="18" fill="currentColor">
+            <use xlink:href="/img/bootstrap-icons.svg#box"/>
+          </svg>
+        </span>
+        Kotakode Coding Festival
       </a>
       <br />
     </div>
