--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
       <div class="sidebar-divider"></div>
       <a href="https://bearcats.dev/innovations" target="_blank" class="sidebar-link sidebar-link-with-icon">
         <span class="sidebar-icon text-white" style="background-color: #428dfc">
-          <img src="/img/logo/adab.png" alt="Icon">
+          <img src="/img/logo/adab.png" alt="Icon" width="30" height="30">
         </span>
         ADAB to Connect<br>
         Ayo Dengar Ayo Bicara
@@ -610,13 +610,13 @@
       <div class="sidebar-divider"></div>
       <a href="https://competition.binus.ac.id/icpc2020/" target="_blank" class="sidebar-link sidebar-link-with-icon">
         <span class="sidebar-icon">
-          <img src="/img/logo/icpc.ico" alt="Icon">
+          <img src="/img/logo/icpc.ico" alt="Icon" width="30" height="30">
         </span>
         ICPC INC 2020
       </a>
       <a href="https://hacktoberfest.digitalocean.com/" target="_blank" class="sidebar-link sidebar-link-with-icon">
         <span class="sidebar-icon">
-          <img src="/img/logo/hacktoberfest-2020.ico" alt="Icon">
+          <img src="/img/logo/hacktoberfest-2020.ico" alt="Icon" width="30" height="30">
         </span>
         Hacktoberfest 2020
       </a>
